kubernetes/final-ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /v1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service-v1
                port:
                  number: 80
          - path: /v1-1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service-v1-1
                port:
                  number: 80
          - path: /v2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service-v2
                port:
                  number: 80
